# debian-pkg-sugar-base

./: .gitignore  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac  maint-helper.py
debian/: README.Debian  README.packaging  changelog  control  control.in  copyright  copyright_hints  gbp.conf  rules  watch
debian/cdbs/1/class/: py-compile.mk  python-vars.mk
debian/cdbs/1/rules/: copyright-check.mk
debian/patches/: 0000_upstream_stable_head.patch  0001_upstream_git_until_56da6b0.patch  1001_enable_danish_l10n.patch  1001_modernize_ipython_support.patch  2991_autoreconf.patch  2991_enable_danish_l10n.patch  series
po/: POTFILES.in  am.po  ar.po  ar_SY.po  ay.po  aym.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cpp.po  cs.po  da.po  de.po  dz.po  el.po  en.po  en_GB.po  en_US.po  es.po  fa_AF.po  ff.po  fi.po  fil.po  fr.po  gu.po  ha.po  he.po  hi.po  ht.po  hu.po  hus.po  hy.po  id.po  it.po  ja.po  km.po  kn.po  ko.po  (+45 more)
src/: Makefile.in
src/sugar/: Makefile.am  Makefile.in  __init__.py  _sugarbaseext.defs  _sugarbaseext.override  logger.py  mime.py
src/sugar/dispatch/: Makefile.am  Makefile.in  __init__.py  dispatcher.py  saferef.py
sugar/: .gitignore  Makefile.am  _sugarbaseextmodule.c  mime.py
